<?xml version="1.0"?>
<package format="2">
  <name>lynk_controller</name>
  <version>0.0.1</version>
  <description>High-level vehicle controller for LYNK Nexus</description>
  <maintainer email="melek@todo.todo">melek</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>lynk_nexus</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>lynk_nexus</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>lynk_nexus</exec_depend>

  <export>
  </export>
</package>
